2017-08-23  Daniel Santos  <daniel.santos@pobox.com>

	* config/i386/i386.h (ix86_frame::stack_realign_allocate_offset):
	Remove field.
	(ix86_frame::stack_realign_allocate): New field.
	(struct machine_frame_state): Modify comments.
	(machine_frame_state::sp_realigned_fp_end): New field.
	* config/i386/i386.c (ix86_compute_frame_layout): Rework stack frame
	layout calculation.
	(sp_valid_at): Add assertion to assure no attempt to access invalid
	offset of a realigned stack.
	(fp_valid_at): Likewise.
	(choose_baseaddr): Modify comments.
	(ix86_emit_outlined_ms2sysv_save): Adjust to changes in
	ix86_expand_prologue.
	(ix86_expand_prologue): Modify stack realignment and allocation.
	(ix86_expand_epilogue): Modify comments.
	* doc/sourcebuild.texi: Add documentation for target selectors avx2,
	avx2_runtime, avx512f, and avx512f_runtime.

2017-08-23  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.opt: Remove unneeded Init(0) initializations.
	(mstackrealign): Do not init to -1.
	* config/i386/i386.c (ix86_option_override_internal):
	Check opts_set, not opts when setting default value of
	opts->x_ix86_force_align_arg_pointer.

2017-08-23  Richard Biener  <rguenther@suse.de>

	* function.c (fndecl_name): Use verbosity 1 (no arguments) for
	lang_hooks.decl_printable_name.
	* print-rtl-function.c (print_rtx_function): Likewise.
	* tree-pretty-print.c (dump_function_header): Likewise.

2017-08-23  Richard Biener  <rguenther@suse.de>

	PR lto/81940
	* dwarf2out.c (dwarf2out_abstract_function): Handle LTO with
	-g0 at compile-time.

2017-08-23  Tamar Christina  <tamar.christina@arm.com>

	PR middle-end/19706
	* doc/sourcebuild.texi (Other hardware attributes):
	Document xorsign.

2017-08-23  Tamar Christina  <tamar.christina@arm.com>

	PR middle-end/19706
	* tree-ssa-math-opts.c (convert_expand_mult_copysign):
	Fix single-use check.

2017-08-23  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	* gcc.c (execute): Only test for SIGKILL and SIGQUIT if available.
